# comp-math

./: .editorconfig  .gitignore  CMakeLists.txt  icon  matrix  matrix2  points  vectors  vectors2
libsrc/: CMakeLists.txt
libsrc/imgui/: imconfig.h  imgui_cpp.cpp  imgui_cpp.h
src/: gauss_gui.cpp  gauss_gui.hpp  graph.cpp  graph.hpp  gui.cpp  gui.hpp  imcpp20.cpp  imcpp20.hpp  imhelper.cpp  imhelper.hpp  main.cpp  math.hpp  points-input.cpp  points-input.hpp  task.hpp
src/approx/: ap-gui.cpp  ap-gui.hpp  calc.cpp  calc.hpp
src/diffeq/: calc.cpp  calc.hpp  de-gui.cpp  de-gui.hpp
src/gauss/: g-gui.cpp  g-gui.hpp  gui.cpp  gui.hpp  matrix.hpp  solve.hpp
src/integral/: calc.cpp  calc.hpp  int-gui.cpp  int-gui.hpp
src/interp/: calc.cpp  calc.hpp  it-gui.cpp  it-gui.hpp
src/nonlin/: calc.cpp  calc.hpp  gui.cpp  gui.hpp  nl-gui.cpp  nl-gui.hpp
src/nonlin-system/: calc.cpp  calc.hpp  nls-gui.cpp  nls-gui.hpp
src/util/: util.hpp
